# U-robot

./: README.md
aivoice/: CMakeLists.txt  package.xml
aivoice/launch/: aivoice.launch
aivoice/msg/: asr_ctrl_msg.msg  asr_result_msg.msg  nlp_msg.msg  speak_msg.msg  speak_notify_msg.msg  translate_request_msg.msg  tts_msg.msg
aivoice/srv/: nlp.srv  trans.srv
amcl/src/: amcl_node.cpp
do_task/: CMakeLists.txt  package.xml  setup.py
do_task/cfg/: commands.json  params.yaml  tasks.json
do_task/launch/: do_task.launch
do_task/src/: cmd_handler.py  do_task_node.py  executor.py  task.py
face_rec/: CMakeLists.txt  package.xml
face_rec/action/: face_rec.action
face_rec/src/: face_rec_node.cpp
laser_sim/: CMakeLists.txt  package.xml
laser_sim/launch/: laser_sim.launch
laser_sim/src/: laser_sim_node.cpp
razor_imu_9dof/config/: my_razor2.yaml
razor_imu_9dof/launch/: razor-pub.launch
razor_imu_9dof/nodes/: imu_node.py
ros_arduino_bridge/ros_arduino_msgs/: CMakeLists.txt
rplidar_ros/launch/: frames.gv  rplidar.launch
rplidar_ros/src/: node.cpp
youyou_robot/: CMakeLists.txt  package.xml
youyou_robot/cfg/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
youyou_robot/launch/: amcl_omni.launch  amcl_omni_bak.launch  create_map.launch  odom_ekf.launch  odom_ekf.py  robot_base.launch  sonar2laser.launch  sonar2laser.py  startup.launch
youyou_robot/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  (+3 more)
(+61 files in other folders)
